# freedom-os-onboarding

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
docs/: capability-registry-and-manager.md
references/: capability-install.md  contribution-workflow.md
scripts/: list-installed-capabilities.sh
skills/freedom-os-launcher/: SKILL.md
skills/freedom-os-launcher/references/: github-access.md  troubleshooting.md
skills/freedom-os-manager/: SKILL.md
skills/freedom-os-manager/references/: capability-install.md  contribution-workflow.md  todo-dashboard.md
skills/freedom-os-manager/scripts/: bootstrap-todo-dashboard.sh  install-capability.sh  install-team-skill.sh
skills/freedom-os-onboarding/: SKILL.md
skills/freedom-os-onboarding/references/: todo-dashboard.md  troubleshooting.md
skills/freedom-os-onboarding/scripts/: bootstrap-todo-dashboard.sh  detect-agents.sh  install-capability.sh
src/freedom_os_manager/: __init__.py  cli.py  doctor.py  installed.py  models.py  registry.py  scanner.py
src/freedom_os_manager/adapters/: __init__.py  agents.py  hermes.py
tests/: test_cli.py  test_registry.py  test_scanner.py
